force-app/main/default/objects/MTDT_OMIT_PROBE__c/MTDT_OMIT_PROBE__c.object-meta.xml
<CustomObject>
    <description>refresh-fix e2e marker v3</description>
    <label>OMIT PROBE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OMIT PROBEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>