force-app/main/default/objects/MTDT_OMIT_PROBE__c/fields/Alpha__c.field-meta.xml
<CustomField>
    <fullName>Alpha__c</fullName>
    <label>Alpha</label>
    <length>50</length>
    <type>Text</type>
</CustomField>