force-app/main/default/objects/MTDT_OMIT_PROBE__c/fields/Beta__c.field-meta.xml
<CustomField>
    <fullName>Beta__c</fullName>
    <label>Beta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>