force-app/main/default/objects/MTDT_OMIT_PROBE__c/fields/Epsilon__c.field-meta.xml
<CustomField>
    <fullName>Epsilon__c</fullName>
    <label>Epsilon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>