force-app/main/default/objects/MTDT_OMIT_PROBE__c/fields/Gamma__c.field-meta.xml
<CustomField>
    <fullName>Gamma__c</fullName>
    <label>Gamma</label>
    <length>50</length>
    <type>Text</type>
</CustomField>