force-app/main/default/objects/MTDT_OMIT_PROBE__c/recordTypes/MTDT_RT_A.recordType-meta.xml
<RecordType>
    <fullName>MTDT_RT_A</fullName>
    <active>true</active>
    <label>MTDT RT A</label>
</RecordType>